--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation project(path: ':moudle_titlebar')
+    implementation project(path: ':module_titlebar')
+    implementation project(path: ':module_coroutine')
+    implementation project(path: ':module_textClock')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
